@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.5rc2
 
+	- Documentation updates (STR #365)
+	- The value(const Fl_Menu_Item*) method was not
+	  implemented for Fl_Choice (STR #366)
         - Fl_Pack didn't draw child widget labels the same way
           as Fl_Group, causing display problems (STR #360)
         - fl_read_image() didn't work when reading from an
